refactor(page-builder): lifecycle events up one level

--- a/docs/key-topics/page-builder/lifecycle-events.mdx
+++ b/docs/key-topics/page-builder/lifecycle-events.mdx
@@ -29,19 +29,18 @@ With the lifecycle events you can hook into a number of different operations, fo
  * change the page data which is going to be stored
  * notify another system that new page was stored
 
-## Available Lifecycle Events
 
-### System
+## System
 
-#### onBeforeInstall
+### onBeforeInstall
 This event is triggered before the installation of the Page Builder and insertion of initial `Welcome to Webiny` and `Not Found` pages.
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | tenant | ID of the current tenant |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -52,15 +51,15 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onAfterInstall
+### onAfterInstall
 This event is triggered after the installation of the Page Builder and insertion of initial `Welcome to Webiny` and `Not Found` pages.
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | tenant | ID of the current tenant |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -71,11 +70,11 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-### Settings
-#### onBeforeSettingsUpdate
+## Settings
+### onBeforeSettingsUpdate
 This event is triggered before settings data is going to be stored.
 
-#### Event arguments
+### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -85,7 +84,7 @@ This event is triggered before settings data is going to be stored.
 | meta.diff.pages | Array which contains which pages were changed |
 
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -96,10 +95,10 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onAfterSettingsUpdate
+### onAfterSettingsUpdate
 This event is triggered after settings data was stored.
 
-#### Event arguments
+### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -109,7 +108,7 @@ This event is triggered after settings data was stored.
 | meta.diff.pages | Array which contains calculated page changes |
 
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -121,17 +120,17 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-### Categories
-#### onBeforeCategoryCreate
+## Categories
+### onBeforeCategoryCreate
 This event is triggered before new category is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | category | Category object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -148,16 +147,16 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterCategoryCreate
+### onAfterCategoryCreate
 This event is triggered after new category is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | category | Category object which was stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -167,10 +166,10 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforeCategoryUpdate
+### onBeforeCategoryUpdate
 This event is triggered before existing category is updated and stored.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -178,7 +177,7 @@ This event is triggered before existing category is updated and stored.
 | category | Category object which is going to be stored |
 
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -194,10 +193,10 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterCategoryUpdate
+### onAfterCategoryUpdate
 This event is triggered after existing category is updated and stored.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -205,7 +204,7 @@ This event is triggered after existing category is updated and stored.
 | category | Category object which was stored |
 
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -216,16 +215,16 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onBeforeCategoryDelete
+### onBeforeCategoryDelete
 This event is triggered before category is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | category | Category object which is going to be deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -242,16 +241,16 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onAfterCategoryDelete
+### onAfterCategoryDelete
 This event is triggered after category is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | category | Category object which was deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -263,18 +262,18 @@ new ContextPlugin<PbContext>(async context => {
 
 
 
-### Menus
-#### onBeforeMenuCreate
+## Menus
+### onBeforeMenuCreate
 This event is triggered before new menu is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | input | Input received from user |
 | menu | Menu object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -290,17 +289,17 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterMenuCreate
+### onAfterMenuCreate
 This event is triggered after new menu is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | input | Input received from user |
 | menu | Menu object which was stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -310,10 +309,10 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforeMenuUpdate
+### onBeforeMenuUpdate
 This event is triggered before existing menu is changed and stored.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -321,7 +320,7 @@ This event is triggered before existing menu is changed and stored.
 | original | Menu object which was received from the database |
 | menu | Menu object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -337,10 +336,10 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterMenuUpdate
+### onAfterMenuUpdate
 This event is triggered after existing menu is changed and stored.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -348,7 +347,7 @@ This event is triggered after existing menu is changed and stored.
 | original | Menu object which was received from the database  |
 | menu | Menu object which was stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -358,16 +357,16 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforeMenuDelete
+### onBeforeMenuDelete
 This event is triggered before existing menu is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | menu | Menu object which is going to be deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -384,16 +383,16 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onAfterMenuDelete
+### onAfterMenuDelete
 This event is triggered after existing menu is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | menu | Menu object which was deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -404,17 +403,17 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-### Page Elements
-#### onBeforePageElementCreate
+## Page Elements
+### onBeforePageElementCreate
 This event is triggered before new page element is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | pageElement | Page element object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -428,16 +427,16 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onAfterPageElementCreate
+### onAfterPageElementCreate
 This event is triggered after new page element is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | pageElement | Page element object which is stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -447,17 +446,17 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageElementUpdate
+### onBeforePageElementUpdate
 This event is triggered before existing page element is changed and stored.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | original | Page element object which was received from the database  |
 | pageElement | Page element object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -473,17 +472,17 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageElementUpdate
+### onAfterPageElementUpdate
 This event is triggered after existing page element is changed and stored.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | original | Page element object which was received from the database  |
 | pageElement | Page element object which is stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -493,16 +492,16 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageElementDelete
+### onBeforePageElementDelete
 This event is triggered before page element is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | pageElement | Page element object which is going to be deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -515,16 +514,16 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageElementDelete
+### onAfterPageElementDelete
 This event is triggered after page element is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | pageElement | Page element object which was deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -534,18 +533,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-### Pages
-#### onBeforePageCreate
+## Pages
+### onBeforePageCreate
 
 This event is triggered before a new page is stored into the database. This event is not triggered when creating a page from another page.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | page | Page object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -558,17 +557,17 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageCreate
+### onAfterPageCreate
 
 This event is triggered after new page is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | page | Page object which was stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -581,18 +580,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageCreateFrom
+### onBeforePageCreateFrom
 
 This event is triggered before a new page, which is created from another page, is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | original | Page object which is the base for a new page |
 | page | Page object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -605,18 +604,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageCreateFrom
+### onAfterPageCreateFrom
 
 This event is triggered after a new page, which is created from another page, is stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | original | Page object which is the base for a new page |
 | page | Page object which was stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -629,18 +628,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageUpdate
+### onBeforePageUpdate
 
 This event is triggered before a page is changed and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | original | Page object which was received from the database  |
 | page | Page object which is going to be stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -657,18 +656,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageUpdate
+### onAfterPageUpdate
 
 This event is triggered after a page changed and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | original | Page object which was received from the database  |
 | page | Page object which was stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -683,17 +682,17 @@ new ContextPlugin<PbContext>(async context => {
 
 
 
-#### onBeforePageDelete
+### onBeforePageDelete
 
 This event is triggered before a page is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | page | Page object which is going to be deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -709,17 +708,17 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageDelete
+### onAfterPageDelete
 
 This event is triggered after a page is deleted from the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | page | Page object which was deleted |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -733,11 +732,11 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onBeforePagePublish
+### onBeforePagePublish
 
 This event is triggered before a page is changed and stored into the database as the published one.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -745,7 +744,7 @@ This event is triggered before a page is changed and stored into the database as
 | latestPage | Page object of the last revision of the page we are publishing  |
 | page | Page object which is going to be published |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -760,11 +759,11 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPagePublish
+### onAfterPagePublish
 
 This event is triggered after a page is changed and stored into the database as the published one.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -772,7 +771,7 @@ This event is triggered after a page is changed and stored into the database as 
 | latestPage | Page object of the last revision of the page we are publishing  |
 | page | Page object which was published |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -785,18 +784,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageUnpublish
+### onBeforePageUnpublish
 
 This event is triggered before a page is changed and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | latestPage | Page object of the last revision of the page we are unpublishing  |
 | page | Page object which is going to be unpublished |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -812,18 +811,18 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 
-#### onAfterPageUnpublish
+### onAfterPageUnpublish
 
 This event is triggered after a page is changed and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | latestPage | Page object of the last revision of the page we are unpublishing  |
 | page | Page object which was unpublished |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -836,18 +835,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageRequestChanges
+### onBeforePageRequestChanges
 
 This event is triggered before a page is marked as Requested Changes status and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | latestPage | Page object of the last revision of the page we are requesting changes on  |
 | page | Page object which is going to be set into Requested Changes status |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -864,18 +863,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageRequestChanges
+### onAfterPageRequestChanges
 
 This event is triggered after a page is marked as Requested Changes status and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | latestPage | Page object of the last revision of the page we are requesting changes on  |
 | page | Page object which was set into Requested Changes status and stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -888,18 +887,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onBeforePageRequestReview
+### onBeforePageRequestReview
 
 This event is triggered before a page is marked as Requested Review status and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | latestPage | Page object of the last revision of the page we are requesting review on  |
 | page | Page object which is going to be set into Requested Review status |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
@@ -916,18 +915,18 @@ new ContextPlugin<PbContext>(async context => {
 })
 ```
 
-#### onAfterPageRequestReview
+### onAfterPageRequestReview
 
 This event is triggered after a page is marked as Requested Review status and stored into the database.
 
-##### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
 | latestPage | Page object of the last revision of the page we are requesting review on  |
 | page | Page object which was set into Requested Review status and stored |
 
-##### How to subscribe to this event?
+#### How to subscribe to this event?
 
 ```typescript
 new ContextPlugin<PbContext>(async context => {
