refactor(page-builder): event arguments down one level

--- a/docs/key-topics/page-builder/lifecycle-events.mdx
+++ b/docs/key-topics/page-builder/lifecycle-events.mdx
@@ -74,7 +74,7 @@ new ContextPlugin<PbContext>(async context => {
 ### onBeforeSettingsUpdate
 This event is triggered before settings data is going to be stored.
 
-### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
@@ -98,7 +98,7 @@ new ContextPlugin<PbContext>(async context => {
 ### onAfterSettingsUpdate
 This event is triggered after settings data was stored.
 
-### Event arguments
+#### Event arguments
 
 | Property | Description |
 | -------- | ----------- |
