refactor(headless-cms): lifecycle events

--- a/docs/key-topics/page-builder/lifecycle-events.mdx
+++ b/docs/key-topics/page-builder/lifecycle-events.mdx
@@ -940,7 +940,7 @@ new ContextPlugin<PbContext>(async context => {
 ```
 
 :::danger
-Please, be aware that you can change what ever you want on the page object before it is stored into the database, so be careful with changing the data.
+Please, be aware that you can change what ever you want on the object before it is stored into the database, so be careful with changing the data.
 :::
 
 ## Registering Lifecycle Event Subscriptions
