refactor(headless-cms): storage transform plugin usage

--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -19,6 +19,11 @@ description: Learn about StorageTransformPlugin
 
 The [StorageTransformPlugin](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms/src/content/plugins/storage/StorageTransformPlugin.ts) serves as a transformer of field values, as it targets only certain field type.
 
+## What Is It Used For?
+
+The plugin is used to transform a certain field value to another value.
+For example, the time in format `15:45:59` is not usable when filtering, so we transform it to seconds and store it as a number.
+
 ## When Is The Plugin Executed?
 
 ### Storing The Data
