--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -122,4 +122,4 @@ Of course, `copyToOtherStorageSystem` and `fetchFromOtherStorageSystem` are your
 
 The `StorageTransformPlugin` makes it possible for you manage the value of the field, and where is it stored in case of storing to another storage system, so it is searchable.
 
-Be aware that in case of `extremelyLargeText` you cannot search the text but only the identifier created when copying data to another storage system.
+Be aware that in case of storing the value to other storage system, for example `extremelyLargeText`, you cannot search the value but only the identifier created when copying data to another storage system.
