refactor(headless-cms): storage transform plugin register

--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -118,6 +118,21 @@ new StorageTransformPlugin({
 
 Of course, `copyToOtherStorageSystem` and `fetchFromOtherStorageSystem` are your own methods to copy and fetch the field value from other storage system.
 
+## Registering The Plugin
+
+For the plugin to take effect you must register it in the system. File to register it in is `api/code/headlessCMS/src/index.ts`.
+
+Note that if you register two plugins for the same field type, system will use the last one.
+
+```typescript title="api/code/headlessCMS/src/index.ts"
+const handler = createHandler({
+	plugins: [
+        // ... other plugins
+        new StorageTransformPlugin()
+	]
+});
+```
+
 ## Conclusion
 
 The `StorageTransformPlugin` makes it possible for you manage the value of the field, and where is it stored in case of storing to another storage system, so it is searchable.
