refactor(headless-cms): storage transform plugin info

--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -10,7 +10,7 @@ description: Learn about StorageTransformPlugin
 
 - what is StorageTransformPlugin
 - when is it executed
-- why do we need and use it
+- why do we need it
 
 :::
 
