refactor(headless-cms): lifecycle events group

--- a/docs/key-topics/headless-cms/lifecycle-events.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-events.mdx
@@ -116,7 +116,7 @@ new ContextPlugin<CmsContext>(async context => {
 ```
 
 ### onBeforeGroupUpdate
-This event is triggered before group is changed stored into the database.
+This event is triggered before group is changed and stored into the database.
 
 #### Event arguments
 
@@ -142,7 +142,7 @@ new ContextPlugin<CmsContext>(async context => {
 ```
 
 ### onAfterGroupUpdate
-This event is triggered before group is changed stored into the database.
+This event is triggered before group is changed and stored into the database.
 
 #### Event arguments
 
