refactor(headless-cms): storage transform plugin text transform

--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -76,7 +76,7 @@ new StorageTransformPlugin({
 
 ### Text transform
 
-If you have a `extremelyLargeText` field type, which can get really large (couple of megabytes). You might want that it is not stored into the database (DynamoDB for example, as it has 400 kilobytes record limit).
+If you have a `extremelyLargeText` field type, which can get really large (couple of megabytes). You might want to compress it or not store it into the database at all (DynamoDB for example, as it has 400 kilobytes record limit).
 
 #### Compressing The Value
 The `StorageTransformPlugin` helps in this case by compressing the field value.
