refactor(headless-cms): storage transform plugin images

--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -6,6 +6,10 @@ keywords: ["webiny", "headless cms", "storage transform plugin"]
 description: Learn about StorageTransformPlugin
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import storingTheData from "./assets/storage-transform-plugin-storing-the-data.png";
+import fetchingTheData from "./assets/storage-transform-plugin-fetching-the-data.png";
+
 :::tip What you'll learn
 
 - what is StorageTransformPlugin
@@ -29,8 +33,23 @@ For example, the time in format `15:45:59` is not usable when filtering, so we t
 ### Storing The Data
 When storing the data (create, update and createFrom) the plugin's `toStorage` is executed just after the `onBefore` lifecycle events and before actual call to the storage operations.
 
+<CenteredImage
+	shadow={false}
+	style={{maxWidth: 850 }}
+	alt="storing the data flow"
+	src={storingTheData}
+/>
+
 ### Fetching The Data
 When fetching the entries the plugin's `fromStorage` is executed in the GraphQL resolvers, just before the output of the field value. We decided to have it like this because of possible unnecessary calls to `fromStorage` if we executed it just after fetching the data from the database.
+
+<CenteredImage
+	shadow={false}
+	style={{maxWidth: 850 }}
+	alt="fetching the data flow"
+	src={fetchingTheData}
+/>
+
 
 #### Why Execute `fromStorage` Just Before The Output?
 For example, let's imagine there is a entry field with a few megabytes of data in it - we stored it to S3 bucket.
