refactor(headless-cms): storage transform plugin warning

--- a/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
+++ b/docs/serverless-cms/headless-cms/plugins/storage-transform-plugin.mdx
@@ -156,4 +156,6 @@ const handler = createHandler({
 
 The `StorageTransformPlugin` makes it possible for you manage the value of the field, and where is it stored in case of storing to another storage system, so it is searchable.
 
+:::warning
 Be aware that in case of storing the value to other storage system, for example `extremelyLargeText`, you cannot search the value but only the identifier created when copying data to another storage system.
+:::
