--- a/docs/how-to-guides/webiny-applications/admin-area/introduction.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/introduction.mdx
@@ -6,6 +6,9 @@ keywords: ["admin", "area", "ui"]
 description: Learn how Admin Area works and how it allows you to add your own plugins.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import dashboardImg from "./introduction/dashboard.png";
+
 :::info Important
 Features described in this guide are available since Webiny version **5.21.0** or greater.
 :::
@@ -18,13 +21,13 @@ Features described in this guide are available since Webiny version **5.21.0** o
 
 ## Overview
 
-Webiny Serverless CMS is a product that consists of several applications: File Manager, Page Builder, Headless CMS, Form Builder, and several others. Most of these applications depend on each other, or simply add capabilities to each other. Admin Area is a shell application which serves as a base for all other applications to extend. It provides the foundation and a framework to develop new features.
+Webiny Serverless CMS is a unified product that consists of several apps: File Manager, Page Builder, Headless CMS, Form Builder, and several others. To access them, you use the Admin app. The Admin app not only contains ready-made apps, but also provides a framework for developers to extend their functionality, and develop custom ones.
 
-The low-level setup of the entire Webiny CMS consists of various React Context providers, the order of which is very important, so we intentionally don't expose the base setup in user's projects.
+<CenteredImage src={dashboardImg} title="Admin App Dashboard" />
 
-## Admin Area Setup
+## Admin App Setup
 
-If you inspect the files that make up the Admin Area application in your Webiny project, you'll notice that it only has this small code snippet:
+If you inspect the files that make up the Admin app in your Webiny project (located in `apps/admin` folder within your Webiny project), you'll notice that it only has this small code snippet:
 
 ```tsx title="apps/admin/code/src/App.tsx"
 import React from "react";
@@ -41,25 +44,16 @@ export const App = () => {
 };
 ```
 
-The most interesting part is this import statement:
+The `Admin` component provides the full setup of the Webiny CMS Admin app, and the `@webiny/app-serverless-cms` package also exports various utilities and components you can use to extend the CMS.
 
-```ts
-import { Admin } from "@webiny/app-serverless-cms";
-```
-
-The `@webiny/app-serverless-cms` package, and `Admin` component in particular, provides the full setup of the Webiny CMS admin application, and exports various utilities and components you can use to extend the CMS. This package includes all the applications that make up the Webiny Serverless CMS.
-
-Now, `Cognito` component comes from a separate package, and once mounted, it extends the CMS and provides AWS Cognito authentication capabilities, admin user management, etc. This is how you add new functionality to the CMS: you simply mount a React component, which internally uses other React components to add menus, routes, user menu items, etc. More on this in the next article.
-
-:::note Good to know
-
-If you're familiar with the previous versions of Webiny, you'll notice that we're moving away from the global plugins registry to this new, React based, API. Old plugins still work, but over time, we'll be migrating more and more of our apps to this new API (components). This is not only more natural in the context of React, but it also unlocks various features and allows us to use the full power of React when building our plugins.
-
-:::
-
+In the code example above, you can see we're also using a `Cognito` component, which extends the CMS and provides AWS Cognito authentication capabilities, admin user management, etc. This is how you add new functionality to the CMS: you simply mount a React component, which internally uses other React components to add menus, routes, user menu items, etc. More on this in the next article.
 
 ## FAQ
 
-#### Can I disable individual applications?
+#### Can I disable individual apps?
 
-Webiny CMS is a unified product. Think of it as a single product which solves a set of problems. Individual applications are often interconnected and rely on each other, so you can't just disable one app and expect the whole thing to continue working. If you need to hide individual menu items, so they are not crowding your UI, get in touch with us on our [Community Slack](https://www.webiny.com/slack), and we'll help you out.
+Webiny CMS is a unified product. Think of it as a single product which solves a set of problems. Individual apps are often interconnected and rely on each other, so you can't just disable one app and expect the whole thing to continue working. If you need to hide individual menu items, so they are not crowding your UI, get in touch with us on our [Community Slack](https://www.webiny.com/slack), and we'll help you out.
+
+#### What about the old plugins?
+
+If you're familiar with the previous versions of Webiny, you'll notice that we're moving away from the global plugins registry to this new, React based, API. Old plugins still work, but over time, we'll be migrating more and more of our apps to this new API (components). This is not only more natural in the context of React, but it also unlocks various features and allows us to use the full power of React when building our plugins.
