fix: update MT setup article

--- a/docs/enterprise/multi-tenancy/setup.mdx
+++ b/docs/enterprise/multi-tenancy/setup.mdx
@@ -85,15 +85,24 @@ Then, add the plugin to the Lambda handler, below `securityPlugins`. See an exam
 
 <CenteredImage src={importTMApi} title="Enable Tenant Manager plugin." />
 
-Now we need to do a similar thing in the `admin` app. Open `apps/admin/code/src/plugins/index.ts`, and import the plugin:
+Now we need to enable the Tenant Manager module in the Admin app. In your `apps/admin/code/src/App.tsx`, add the following:
 
-```ts
-import tenantManager from "@webiny/app-tenant-manager/plugins";
+```tsx title="apps/admin/code/src/App.tsx" {4,11}
+import React from "react";
+import { Admin } from "@webiny/app-serverless-cms";
+import { Cognito } from "@webiny/app-admin-users-cognito";
+import { TenantManager } from "@webiny/app-tenant-manager";
+import "./App.scss";
+
+export const App = () => {
+  return (
+    <Admin>
+      <Cognito />
+      <TenantManager />
+    </Admin>
+  );
+};
 ```
-
-Then, register the plugin somewhere below the `tenancyPlugins`. See an example in the image below:
-
-<CenteredImage src={importTMReact} title="Enable Tenant Manager plugin." />
 
 ## 4) Set Environment Variable
 
