--- a/docs/how-to-guides/webiny-applications/admin-area/framework.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/framework.mdx
@@ -17,7 +17,8 @@ In order to follow this guide, you must use Webiny version **5.21.0** or greater
 :::tip What you'll learn
 
 - the moving parts of the Admin app framework
-- how to create custom plugins
+- what is a plugin
+- how the Admin app is rendered
 
 :::
 
